Fix Changes Required Just-One-Footer-Section Center-form-components Remove-hr-tag align-footer-icons

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ small {
   display: none;
 }
 
-.errorButton {
+.button_Container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -396,7 +396,8 @@ footer form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 100%;
+  align-content: center;
 }
 
 footer textarea {
@@ -420,8 +421,7 @@ footer button {
 
 .footer_icon {
   display: flex;
-  width: 70%;
-  padding-inline-start: 25px;
+  width: 100%;
   align-items: center;
 }
 
@@ -514,17 +514,14 @@ footer h4 {
   margin: 20px;
 }
 
-.form_button:hover {
+.form_button:hover,
+.form_button:focus {
   background: #36b37f;
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
 }
 
 .form_button:active {
   background-color: #008552;
-}
-
-.form_button:focus {
-  background-color: #015535;
 }
 
 .links {
@@ -599,7 +596,7 @@ footer h4 {
   display: none;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   #icon {
     display: none;
   }
@@ -738,6 +735,8 @@ footer h4 {
   .footer_icon li {
     list-style: none;
     flex: 1;
+    gap: 10px;
+    align-items: center;
   }
 
   .ul_desktop li {
@@ -800,8 +799,7 @@ footer h4 {
 
   .footer_icon {
     display: flex;
-    width: 19%;
-    padding-inline-start: 25px;
+    width: 100%;
     align-items: center;
   }
 
@@ -895,7 +893,7 @@ footer h4 {
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    margin: auto;
+    margin: 10 auto;
     background-image: url(./assets/images/desktop/illustration-1-contact-form-desktop.svg), url(./assets/images/desktop/contact\ form-illustratoin-3-desktop.svg), url(./assets/images/desktop/illustration-2-contact-form-desktop.svg);
     justify-content: center;
     background-repeat: no-repeat;
@@ -906,12 +904,12 @@ footer h4 {
     margin-top: 58px;
     display: flex;
     flex-direction: column;
-    align-items: initial;
-    width: 50%;
+    align-items: center;
+    width: 80%;
   }
 
   footer input {
-    margin: 2%;
+    margin: 5%;
     background: #fff;
     border: 1px solid #d0d9d4;
     box-sizing: border-box;
@@ -922,7 +920,7 @@ footer h4 {
     font-size: 15px;
     line-height: 24px;
     color: #6b778c;
-    width: 75%;
+    width: 100%;
   }
 
   footer textarea {
@@ -930,18 +928,18 @@ footer h4 {
     border-radius: 4px;
     border: 1px solid #60c095;
     background: #fff;
-    margin: 2%;
+    margin: 5%;
     font-style: normal;
     font-weight: normal;
     font-size: 15px;
     line-height: 24px;
     color: #091e42;
-    width: 75%;
+    width: 100%;
     box-sizing: border-box;
     height: 100px;
   }
 
-  .errorButton {
+  .button_Container {
     flex-direction: row;
     box-sizing: border-box;
     width: 75%;
@@ -963,14 +961,13 @@ footer h4 {
     letter-spacing: 0.03em;
   }
 
-  footer h4 {
-    display: none;
+  footer button:hover,button:focus {
+    opacity: 0.9;
+    outline: 0;
   }
 
-  footer hr {
-    width: 100%;
-    margin-top: 200px;
-    border-top: 1px solid lightgray;
+  footer h4 {
+    display: none;
   }
 
   small {
